<?php
include_once 'Pizza.php';
/**
 * Created by PhpStorm.
 * User: Administrator
 * Date: 2020/5/4
 * Time: 10:44
 */
class NYStyleClamPizza extends Pizza {

}