<?php
include_once 'Pizza.php';
/**
 * 蔬菜披萨
 * Created by PhpStorm.
 * User: Administrator
 * Date: 2020/5/4
 * Time: 10:44
 */
class NYStyleVeggiePizza extends Pizza {

}